fix #14 - social icons too narrow

--- a/wp-content/themes/techlab/theme/assets/stylesheets/_social-icons.sass
+++ b/wp-content/themes/techlab/theme/assets/stylesheets/_social-icons.sass
@@ -14,7 +14,7 @@
       a
         display: block
         font-size: 1.4em
-        margin: 0 5px
+        margin: 0 .5em
         text-decoration: none
         i
           color: #050505
